[gd_scene load_steps=7 format=3 uid="uid://hotnvkxdrx8c"]

[ext_resource type="Texture2D" uid="uid://l5t2xc4olyxg" path="res://assets/art/sprites/Speed_1.png" id="1_b7mcn"]
[ext_resource type="Script" path="res://interface/shop_buttons/speed_button.gd" id="2_k6v3i"]
[ext_resource type="Texture2D" uid="uid://dn17uvwcltbdn" path="res://assets/art/sprites/Speed_1hover.png" id="2_wcwop"]
[ext_resource type="Texture2D" uid="uid://c5ph2x5p8c0up" path="res://assets/art/sprites/Banana.png" id="3_q1wah"]
[ext_resource type="AudioStream" uid="uid://cvbidksdgxmdj" path="res://assets/sfx/buy_sound.wav" id="4_4q7bf"]
[ext_resource type="Texture2D" uid="uid://xwftamwrd70b" path="res://assets/art/sprites/tooltip1.png" id="6_xrpty"]

[node name="SpeedButton" type="TextureButton"]
offset_left = -18.0
offset_top = -218.0
offset_right = 14.0
offset_bottom = -186.0
texture_normal = ExtResource("1_b7mcn")
texture_hover = ExtResource("2_wcwop")
script = ExtResource("2_k6v3i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 195.0
offset_right = 49.0
offset_bottom = 243.0
texture = ExtResource("3_q1wah")

[node name="Price" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 209.0
offset_right = -22.0
offset_bottom = 225.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "500"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Description" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -72.0
offset_right = 53.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Speed 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BuySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4q7bf")

[node name="ShortDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -45.0
offset_right = 61.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Battery-operated typewriters"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LongDescription" type="Label" parent="."]
layout_mode = 0
offset_left = -37.0
offset_top = 36.0
offset_right = 95.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Shoving a battery into the delicate workings of an antique typewriter has masterfully increased the rate at which simian specialists can mash out text. 

1.5x monkey typing speed"
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 18.0
offset_top = 23.0
offset_right = 67.0
offset_bottom = 69.0
texture = ExtResource("6_xrpty")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
